--- a/pdfsam/pom.xml
+++ b/pdfsam/pom.xml
@@ -133,22 +133,22 @@
 
 	<modules>
 
-		<!--<module>pdfsam-basic</module>-->
-		<!--<module>pdfsam-gui</module>-->
-		<!--<module>pdfsam-i18n</module>-->
-		<!--<module>pdfsam-core</module>-->
-		<!--<module>pdfsam-service</module>-->
-		<!--<module>pdfsam-fx</module>-->
-		<!--<module>pdfsam-merge</module>-->
-		<!--<module>pdfsam-simple-split</module>-->
-		<!--<module>pdfsam-split-by-size</module>-->
-		<!--<module>pdfsam-split-by-bookmarks</module>-->
-		<!--<module>pdfsam-alternate-mix</module>-->
-		<!--<module>pdfsam-rotate</module>-->
-		<!--<module>pdfsam-extract</module>-->
-		<!--<module>pdfsam-docs</module>-->
-
+		<module>pdfsam-basic</module>
+		<module>pdfsam-gui</module>
+		<module>pdfsam-i18n</module>
+		<module>pdfsam-core</module>
+		<module>pdfsam-service</module>
+		<module>pdfsam-fx</module>
+		<module>pdfsam-merge</module>
+		<module>pdfsam-simple-split</module>
+		<module>pdfsam-split-by-size</module>
+		<module>pdfsam-split-by-bookmarks</module>
 		<module>pdfsam-alternate-mix</module>
+		<module>pdfsam-rotate</module>
+		<module>pdfsam-extract</module>
+		<module>pdfsam-docs</module>
+
+		<!--<module>pdfsam-alternate-mix</module>-->
 
 	</modules>
 
